# reasoning_portfolio3

./: README.md  pyproject.toml  run_all_scenarios.sh
.claude/: settings.json
blackjack_rl/: agents.py  cards.py  env.py  evaluate.py  rules.py  train.py
logs/: basic_mc_base_seed0.agent.pkl  basic_mc_base_seed0.progress.csv  basic_mc_dealer_stands_soft17_seed0.agent.pkl  basic_mc_dealer_stands_soft17_seed0.progress.csv  basic_qlearning_base_seed0.agent.pkl  basic_qlearning_base_seed0.progress.csv  counting_mc_base_seed0.agent.pkl  counting_mc_base_seed0.progress.csv  counting_mc_blackjack_6to5_seed0.agent.pkl  counting_mc_blackjack_6to5_seed0.progress.csv  counting_qlearning_base_seed0.agent.pkl  counting_qlearning_base_seed0.progress.csv  improved_mc_base_seed0.agent.pkl  improved_mc_base_seed0.progress.csv  improved_qlearning_base_seed0.agent.pkl  improved_qlearning_base_seed0.progress.csv
logs/naive_bandit_baseline/: counting_mc_base_seed0.naive.agent.pkl  counting_mc_base_seed0.naive.progress.csv  counting_mc_blackjack_6to5_seed0.naive.agent.pkl  counting_mc_blackjack_6to5_seed0.naive.progress.csv  counting_qlearning_base_seed0.naive.agent.pkl  counting_qlearning_base_seed0.naive.progress.csv  improved_mc_base_seed0.naive.agent.pkl  improved_mc_base_seed0.naive.progress.csv  (+2 more)
paper/: analysis.py  gen_tex.py  paper.tex
results/: basic_mc_base_seed0.chart.csv  basic_mc_dealer_stands_soft17_seed0.chart.csv  basic_qlearning_base_seed0.chart.csv  counting_mc_base_seed0.chart.csv  improved_qlearning_base_seed0.chart.csv  summary.json
(+3 files in other folders)
